fix yml, finalize class implementations